cmake_minimum_required(VERSION 3.0.0)
project(main VERSION 0.1.0)
SET(CMAKE_CXX_COMPILER "g++")
set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread" )
find_package (Threads REQUIRED)
find_package(Python REQUIRED)
aux_source_directory(./src/ DIR_SRCS)
include_directories(F:/opencv345/include)
include_directories(D:/Program\ Files/Python37/include)
include_directories(E:/Panda/workspace/src)
link_directories(F:/opencv345/x64/mingw/lib D:/Program\ Files/Python37/libs)
link_libraries(libopencv_world345.dll python37)
add_executable(main ${DIR_SRCS})
set(CPACK_PROJECT_NAME ${main})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
